--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -1,109 +1,16 @@
-\documentclass[a4paper,11.5pt,table]{article}
-\usepackage[textwidth=170mm, textheight=230mm, inner=20mm, top=20mm, bottom=30mm]{geometry}
-\usepackage[normalem]{ulem}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[dvipsnames]{xcolor}
-\usepackage{lipsum}
-\PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
-\usepackage[magyar]{babel}
-\usepackage{amsmath, amsthm,amssymb, paralist, tikz, multirow, float, tikz-uml}
-\usetikzlibrary{arrows, positioning}
-
-\usepackage{listings}
-\lstdefinestyle{customc}{
-	belowcaptionskip=1\baselineskip,
-	breaklines=true,
-	frame=L,
-	language=C++,
-	showstringspaces=false,
-	basicstyle=\ttfamily,
-	%identifierstyle=\color{blue},
-	keywordstyle=\bfseries\color{green!40!black},
-	stringstyle=\color{orange},
-	emph = {std, A, B, BDIT, Base, BaseOne, BaseTwo, C, CharT, Circle, Compr, ConstIterator, Cont, D, Deltoid, Derived, Derived2, DerivedLast, DerivedOne, DerivedTwo, Fact, Fiu, Foo, Greater, Hallgato, IT, InputIt, Iterator, Kor, Lany, Less, LessByX, LinAlgVector, List, Matrix, Negyszog, Negyzet, RAIT, Rombusz, S, Sielo, Sikidom, StringLength, T, T1, T2, Templ, U, Val, X, Y, Z, bad_cast, bidirectional_iterator_tag, const_iterator, deque, forward_iterator_tag, input_iterator_tag, iostream, istream, iterator, iterator_category, line_editor, list, map, multimap, multiset, ostream, pair, random_access_iterator_tag, set, string, strlen, strlenWrong, value_type, vector}, 
-	emphstyle = \color{blue},
-	tabsize = 4,
-	columns=fullflexible
-}
-
-\lstdefinestyle{customasm}{
-	belowcaptionskip=1\baselineskip,
-	frame=L,
-	language=[x86masm]Assembler,
-	basicstyle=\ttfamily,
-	commentstyle=\itshape\color{yellow!40!black},
-}
-
-\lstset{
-	escapechar=@,
-	style=customc,
-	literate =  {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
-	{Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
-	{ö}{{\"o}}1 {ü}{{\"u}}1 {Ö}{{\"O}}1 {Ü}{{\"U}}1
-	{ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
-	{€}{{\euro}}1 {£}{{\pounds}}1 {~}{$\sim$}{1}	
-}
-\usepackage[unicode]{hyperref}
-
-%IMPORTANT https://tex.stackexchange.com/questions/376763/incomplete-iffalse-all-text-was-ignored-after-line-x-with-lstlisting
-\makeatletter
-\expandafter\let\csname active@char\string?\endcsname\relax
-\expandafter\let\csname active@char\string!\endcsname\relax
-\expandafter\let\csname active@char\string:\endcsname\relax
-
-
-\initiate@active@char{?}
-\initiate@active@char{!}
-\initiate@active@char{:}
-\makeatletter
-
+% !TeX root = 01gy_cpp
+\documentclass[../cpp_book/cpp_book.tex]{subfiles}
 \begin{document}
-	%%%%%%%%%%%RÖVIDÍTÉSEK%%%%%%%%%%
-	\setlength\parindent{0pt}
-	\def\<{<\hspace{0mm}<}
-	
-	\theoremstyle{definition}
-	\newtheorem{note}{Megjegyzés}[subsection]
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\begin{titlepage}
-		\vspace*{2cm}
-		\centering
-		\includegraphics[width=5cm]{elte_cimer}
-		
-		\vspace*{2cm}
-		{\Huge Programozási Nyelvek: C++ }
-		
-		\vspace{1cm}
-		{\huge Gyakorlat és előadásjegyzet}
-		
-		\vspace*{5mm}
-		{\large Horváth Gábor gyakorlata alapján}
-		\vspace*{1.5cm}
-		
-		{\large Umann Kristóf}
-		\vfill
-		
-		\begin{lstlisting}[frame=trbl, linewidth=12.6cm, xleftmargin=4.5cm, emph={CppStudent}]
-#include <iostream>
-#include "CppStudent.h"
-
-int main()
-{
-	CppStudent *reader = new CppStudent();
-	reader->readBook();
-	while(reader->doesUnderstand() == false)
-		reader->readBook();	
-	delete reader;
-}
-		\end{lstlisting}
-		\vfill
-		
-		\vspace*{1cm}
-		\today
-	\end{titlepage}
-	\tableofcontents
-	\pagebreak
+	\onlyinsubfile{
+		\begin{center}
+			{\LARGE\textbf{C++}}
+			
+			{\Large Gyakorlat jegyzet}
+			
+			1. óra
+		\end{center}
+		A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlata alapján. (\today)
+	}
 	\section{Előszó}
 	Ez a jegyzet az ELTE Informatikai Kar hallgatóinak készült a \emph{Programozási Nyelvek C++} című tárgyhoz. A jegyzet segítségével a gyakorlaton és előadáson elhangzott anyagok elsajátíthatóak, egy saját, néhány helyen hiányos jegyzetet jól kiegészít. Úgy gondoljuk, hogy aki a jegyzetben leírtakat mélyen megérti, az olvasás mellett a példakódokkal kísérletezik, az jó eséllyel a vizsgáról nem fog sikertelenül távozni. Fontos tehát kihangsúlyoznunk, hogy a cél az aktív tudás elsajátítása, amelyet egyetlen jegyzet sem képes megadni. Az aktív tudás megszerzéséhez fontos a gyakorlás, feladatok megoldása.
 	
