--- a/02gy_cpp/02gy_cpp.tex
+++ b/02gy_cpp/02gy_cpp.tex
@@ -87,29 +87,10 @@ int main()
 	
 	\begin{figure}[!h]
 		\centering
-		\begin{tikzpicture}
-		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
+		\input{../img/stack_example.tikz}
 		
-		
-		\draw [thick, black] (-3, 0) -- (-1, 0);
-		\draw [thick, black] (-3, 0) -- (-3, 2);
-		\draw [thick, black] (-1, 0) -- (-1, 2);
-		
-		\draw [thick, black] (0, 0) -- (2, 0);
-		\draw [thick, black] (0, 0) -- (0, 2);
-		\draw [thick, black] (2, 0) -- (2, 2);
-		\node (x) [Node] at (1,0.25) {x};
-		
-		\draw [thick, black] (3, 0) -- (5, 0);
-		\draw [thick, black] (3, 0) -- (3, 2);
-		\draw [thick, black] (5, 0) -- (5, 2);
-		
-		\draw [thick, black] (6, 0) -- (8, 0);
-		\draw [thick, black] (6, 0) -- (6, 2);
-		\draw [thick, black] (8, 0) -- (8, 2);
-		\node (x) [Node] at (7,0.25) {x};
-		\end{tikzpicture}
+		\smallskip
+		\caption{}\label{stack_example}
 	\end{figure}
 	Az ábrán egy stack-et látunk. Amikor a vezérlés az \texttt{f} függvényhez ér, és ott létrehozza az \texttt{x} változót, azt behelyezi a stack-be. A \texttt{return} kulcsszó hatására készít \texttt{x}-ről egy temporális példányt, ami a függvény visszatérési értéke lesz. Amikor a vezérlés visszatér a \texttt{main} függvényhez, {x}-re nem tudunk tovább hivatkozni, így azt megsemmisíti, és ez ismétlődik, ameddig a ciklus véget nem ér.
 	\smallskip
@@ -136,65 +117,10 @@ p = &d;
 	\end{lstlisting}
 	\begin{figure}[!h]
 		\centering
-		\begin{tikzpicture}
-		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
-		
-		\draw [thick, black] (0, 0) -- (2, 0);
-		\draw [thick, black] (0, 0) -- (0, 3);
-		\draw [thick, black] (2, 0) -- (2, 3);
-		\node (c) [Node] at (1,0.25) {\texttt{c} (5)};
-		\node (d) [Node] at (1,0.75) {\texttt{d} (8)};
-		\node (p) [Node] at (1,1.25) {\texttt{p}};
-		
-		\path[every node/.style={font=\sffamily\small}]
-		(p) edge[bend left = 90, thick, ->] node [right] {} (c);
-		\end{tikzpicture}\quad 
-		\begin{tikzpicture}
-		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
-		
-		\draw [thick, black] (0, 0) -- (2, 0);
-		\draw [thick, black] (0, 0) -- (0, 3);
-		\draw [thick, black] (2, 0) -- (2, 3);
-		\node (c) [Node] at (1,0.25) {\texttt{c} (4)};
-		\node (d) [Node] at (1,0.75) {\texttt{d} (8)};
-		\node (p) [Node] at (1,1.25) {\texttt{p}};
-		
-		\path[every node/.style={font=\sffamily\small}]
-		(p) edge[bend left = 90, thick, ->] node [right] {} (c);
-		\end{tikzpicture}\quad 
-		\begin{tikzpicture}
-		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
-		
-		\draw [thick, black] (0, 0) -- (2, 0);
-		\draw [thick, black] (0, 0) -- (0, 3);
-		\draw [thick, black] (2, 0) -- (2, 3);
-		\node (c) [Node] at (1,0.25) {\texttt{c} (4)};
-		\node (d) [Node] at (1,0.75) {\texttt{d} (8)};
-		\node (p) [Node] at (1,1.25) {\texttt{p}};
-		
-		\path[every node/.style={font=\sffamily\small}]
-		(p) edge[bend left = 90, thick, ->] node [right] {} (d);
-		\end{tikzpicture}\quad 
-		\begin{tikzpicture}
-		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
-		
-		\draw [thick, black] (0, 0) -- (2, 0);
-		\draw [thick, black] (0, 0) -- (0, 3);
-		\draw [thick, black] (2, 0) -- (2, 3);
-		\node (c) [Node] at (1,0.25) {\texttt{c} (4)};
-		\node (d) [Node] at (1,0.75) {\texttt{d} (7)};
-		\node (p) [Node] at (1,1.25) {\texttt{p}};
-		
-		\path[every node/.style={font=\sffamily\small}]
-		(p) edge[bend left = 90, thick, ->] node [right] {} (d);
-		\end{tikzpicture}
+		\input{../img/stack_pointer_intro.tikz}
 		
 		\smallskip
-		Az objektum neve mellett zárójelben található az értéke.
+		\caption{Az objektum neve mellett zárójelben található az értéke.}\label{stack_pointer_intro}
 	\end{figure}
 	Rendre: pointer inicializálása, pointer által mutatott érték módosítása, pointer átállítása másik memóriacímre, és a mutatott érték módosítása.
 	
@@ -291,23 +217,9 @@ std::cout << sizeof(t) << std::endl;
 	
 	\begin{figure}[!h]
 		\centering
-		\begin{tikzpicture}
-			\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-			\tikzstyle{arrow} = [thick,->,>=stealth]
-			
-			\draw [thick, black] (0, 0) -- (2, 0);
-			\draw [thick, black] (0, 0) -- (0, 3.5);
-			\draw [thick, black] (2, 0) -- (2, 3.5);
-			\node (c2) [Node] at (1,0.25) {\texttt{i} (5)};
-			\node (d2) [Node] at (1,0.75) {\texttt{t[0]} (5)};
-			\node (d2) [Node] at (1,1.25) {\texttt{t[1]} (4)};
-			\node (d2) [Node] at (1,1.75) {\texttt{t[2]} (3)};
-			\node (d2) [Node] at (1,2.25) {\texttt{t[3]} (2)};
-			\node (d2) [Node] at (1,2.75) {\texttt{t[4]} (1)};
-		\end{tikzpicture}
-		\smallskip
+		\input{../img/stack_array.tikz}
 		
-		A \texttt{main} függvény változói.
+		\caption{A \texttt{main} függvény változói.}\label{stack_array}
 	\end{figure}
 	\subsection{Biztonsági rések nem definiált viselkedés kihasználásával}
 	Irassuk ki a a tömb elemeit! A példa kedvéért rontsuk el a kódot.
@@ -396,7 +308,7 @@ int main()
 	\end{note}
 	\section{Paraméter átvétel, visszatérési érték}
 	\subsection{Érték szerinti paraméter átvétel}
-	Próbáljuk megvalósítani a swap függvényt!
+	C++ban alapértelmezett módon a paraméterátadás érték szerint történik. Figyeljük meg ennek a következményét a \texttt{swap} függvény megvalósításával!
 	%http://tex.stackexchange.com/questions/228724/how-do-i-make-tikz-make-a-curved-arrow-from-one-node-to-another-when-my-nodes-ar
 	\begin{lstlisting}
 #include <iostream>
@@ -411,49 +323,16 @@ int main()
 {
 	int c = 5, d = 8;
 	swapWrong(c, d);
-	std::cout << c << ' ' << d << std::endl;
+	std::cout << c << ' ' << d << std::endl; //5 8
 }
 	\end{lstlisting}		
-	A program kimenete \texttt{5 8}. Ez egy teljesen jól definiált viselkedés. Ennek az az oka, hogy itt \textbf{érték} szerint vettük át (\textit{pass by value}) \texttt{a} és \texttt{b} paramétert. A következő ábrán megfigyelhetjük mi is történik pontosan. Képzeljük el, hogy a stackbe a program elrakja a \texttt{c} és \texttt{d} változókat. Eztán meghívja a \texttt{swapWrong} függvényt, melyben létrehozott \texttt{a} és \texttt{b} paraméterek szintén a stackre kerülnek. Bár a függvényre lokális \texttt{a} és \texttt{b} paraméterek értékét megcseréli, de a függvényhívás után ezeket ki is törli a stackből. Az eredeti \texttt{c} és \texttt{d} változók éréke nem változott a függvényhívás során.
+	Megfigyelhető, hogy nem sikerült \texttt{c} és \texttt{d} értékét megcserélni. Ez azonban egy teljesen jól definiált viselkedés. Ennek az az oka, hogy itt \textbf{érték} szerint vettük át (\textit{pass by value}) \texttt{a} és \texttt{b} paramétert. A következő ábrán megfigyelhetjük mi is történik pontosan. Képzeljük el, hogy a stackbe a program elrakja a \texttt{c} és \texttt{d} változókat. Eztán meghívja a \texttt{swapWrong} függvényt, melyben létrehozott \texttt{a} és \texttt{b} paraméterek szintén a stackre kerülnek. Bár a függvényre lokális \texttt{a} és \texttt{b} paraméterek értékét megcseréli, de a függvényhívás után ezeket ki is törli a stackből. Az eredeti \texttt{c} és \texttt{d} változók éréke nem változott a függvényhívás során. (ld.: \ref{stack_swap_wrong}. ábra)
 	\begin{figure}[!h]
 		\centering
-		\begin{tikzpicture}
-		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
+		\input{../img/stack_swap_wrong.tikz}
 		
-		\draw [thick, black] (0, 0) -- (2, 0);
-		\draw [thick, black] (0, 0) -- (0, 3);
-		\draw [thick, black] (2, 0) -- (2, 3);
-		\node (c2) [Node] at (1,0.25) {\texttt{c} (5)};
-		\node (d2) [Node] at (1,0.75) {\texttt{d} (8)};
-		
-		\draw [thick, black] (3, 0) -- (5, 0);
-		\draw [thick, black] (3, 0) -- (3, 3);
-		\draw [thick, black] (5, 0) -- (5, 3);
-		\node (c3) [Node] at (4,0.25) {\texttt{c} (5)};
-		\node (d3) [Node] at (4,0.75) {\texttt{d} (8)};
-		\node (a3) [Node] at (4,1.25) {\texttt{a} (5)};
-		\node (b3) [Node] at (4,1.75) {\texttt{b} (8)};
-		\node (b3) [Node] at (4,2.25) {\texttt{tmp} (5)};
-		
-		\draw [thick, black] (6, 0) -- (8, 0);
-		\draw [thick, black] (6, 0) -- (6, 3);
-		\draw [thick, black] (8, 0) -- (8, 3);
-		\node (c3) [Node] at (7,0.25) {\texttt{c} (5)};
-		\node (d3) [Node] at (7,0.75) {\texttt{d} (8)};
-		\node (a3) [Node] at (7,1.25) {\texttt{a} (8)};
-		\node (b3) [Node] at (7,1.75) {\texttt{b} (5)};
-		\node (b3) [Node] at (7,2.25) {\texttt{tmp} (5)};
-		
-		\draw [thick, black] (9, 0) -- (11, 0);
-		\draw [thick, black] (9, 0) -- (9, 3);
-		\draw [thick, black] (11, 0) -- (11, 3);
-		\node (a4) [Node] at (10,0.25) {\texttt{c} (5)};
-		\node (b4) [Node] at (10,0.75) {\texttt{d} (8)};
-		\end{tikzpicture}
-		\smallskip
+		\caption{A \texttt{swapWrong} függvény szemléltetése a stack-en.}\label{stack_swap_wrong}
 	\end{figure}
-	C++ban alapértelmezett módon a paraméterátadás érték szerint történik.
 	\subsection{Mutatók érték szerinti átadása}
   	Nézzük meg, hogy hogyan tudunk megcserélni két értéket ezúttal helyesen, mutatók segítségével.
 	
@@ -481,51 +360,9 @@ int main()
 	\end{note}
 	\begin{figure}[!h]
 		\centering
-		\begin{tikzpicture}
-		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
+		\input{../img/stack_swap_p.tikz}
 		
-		\draw [thick, black] (-3, 0) -- (-1, 0);
-		\draw [thick, black] (-3, 0) -- (-3, 3);
-		\draw [thick, black] (-1, 0) -- (-1, 3);
-		\node (c1) [Node] at (-2,0.25) {\texttt{c} (5)};
-		\node (d1) [Node] at (-2,0.75) {\texttt{d} (8)};
-		
-		\draw [thick, black] (0, 0) -- (2, 0);
-		\draw [thick, black] (0, 0) -- (0, 3);
-		\draw [thick, black] (2, 0) -- (2, 3);
-		\node (c2) [Node] at (1,0.25) {\texttt{c} (5)};
-		\node (d2) [Node] at (1,0.75) {\texttt{d} (8)};
-		\node (a2) [Node] at (1,1.25) {\texttt{a}};
-		\node (b2) [Node] at (1,1.75) {\texttt{b}};
-		\node (tmp2) [Node] at (1,2.25) {\texttt{tmp} (5)};
-		
-		\path[every node/.style={font=\sffamily\small}]
-			(a2) edge[bend left = 90, thick, ->] node [right] {} (c2);
-		\path[every node/.style={font=\sffamily\small}]
-			(b2) edge[bend right = 90, thick, ->] node [left] {} (d2);
-		
-		\draw [thick, black] (3, 0) -- (5, 0);
-		\draw [thick, black] (3, 0) -- (3, 3);
-		\draw [thick, black] (5, 0) -- (5, 3);
-		\node (c3) [Node] at (4,0.25) {\texttt{c} (8)};
-		\node (d3) [Node] at (4,0.75) {\texttt{d} (5)};
-		\node (a3) [Node] at (4,1.25) {\texttt{a}};
-		\node (b3) [Node] at (4,1.75) {\texttt{b}};
-		\node (tmp3) [Node] at (4,2.25) {\texttt{tmp} (5)};
-		
-		
-		\path[every node/.style={font=\sffamily\small}]
-		(a3) edge[bend left = 90, thick, ->] node [right] {} (c3);
-		\path[every node/.style={font=\sffamily\small}]
-		(b3) edge[bend right = 90, thick, ->] node [left] {} (d3);
-		
-		\draw [thick, black] (6, 0) -- (8, 0);
-		\draw [thick, black] (6, 0) -- (6, 3);
-		\draw [thick, black] (8, 0) -- (8, 3);
-		\node (a4) [Node] at (7,0.25) {\texttt{c} (8)};
-		\node (b4) [Node] at (7,0.75) {\texttt{d} (5)};
-		\end{tikzpicture}
+		\caption{A \texttt{swapP} függvény szemléltetése.}\label{stack_swap_p}
 	\end{figure}
 	
 	\begin{lstlisting}
@@ -540,55 +377,9 @@ void swapWrong2(int *a, int *b)
 	
 	\begin{figure}[!h]
 		\centering
-		\begin{tikzpicture}
-		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
+		\input{../img/stack_swap_wrong_2.tikz}
 		
-		\draw [thick, black] (-3, 0) -- (-1, 0);
-		\draw [thick, black] (-3, 0) -- (-3, 3);
-		\draw [thick, black] (-1, 0) -- (-1, 3);
-		\node (c1) [Node] at (-2,0.25) {\texttt{c} (5)};
-		\node (d1) [Node] at (-2,0.75) {\texttt{d} (8)};
-		
-		\draw [thick, black] (0, 0) -- (2, 0);
-		\draw [thick, black] (0, 0) -- (0, 3);
-		\draw [thick, black] (2, 0) -- (2, 3);
-		\node (c2) [Node] at (1,0.25) {\texttt{c} (5)};
-		\node (d2) [Node] at (1,0.75) {\texttt{d} (8)};
-		\node (a2) [Node] at (1,1.25) {\texttt{a}};
-		\node (b2) [Node] at (1,1.75) {\texttt{b}};
-		\node (tmp2) [Node] at (1,2.25) {\texttt{tmp}};
-		
-		\path[every node/.style={font=\sffamily\small}]
-		(a2) edge[bend left = 90, thick, ->] node [right] {} (c2);
-		\path[every node/.style={font=\sffamily\small}]
-		(b2) edge[bend right = 90, thick, ->] node [left] {} (d2);
-		\path[every node/.style={font=\sffamily\small}]
-		(tmp2) edge[bend right = 90, thick, ->] node [left] {} (c2);
-		
-		\draw [thick, black] (3, 0) -- (5, 0);
-		\draw [thick, black] (3, 0) -- (3, 3);
-		\draw [thick, black] (5, 0) -- (5, 3);
-		\node (c3) [Node] at (4,0.25) {\texttt{c} (5)};
-		\node (d3) [Node] at (4,0.75) {\texttt{d} (8)};
-		\node (a3) [Node] at (4,1.25) {\texttt{a}};
-		\node (b3) [Node] at (4,1.75) {\texttt{b}};
-		\node (tmp3) [Node] at (4,2.25) {\texttt{tmp}};
-		
-		
-		\path[every node/.style={font=\sffamily\small}]
-		(a3) edge[bend left = 90, thick, ->] node [right] {} (d3);
-		\path[every node/.style={font=\sffamily\small}]
-		(b3) edge[bend right = 90, thick, ->] node [left] {} (c3);
-		\path[every node/.style={font=\sffamily\small}]
-		(tmp3) edge[bend right = 90, thick, ->] node [left] {} (c3);
-		
-		\draw [thick, black] (6, 0) -- (8, 0);
-		\draw [thick, black] (6, 0) -- (6, 3);
-		\draw [thick, black] (8, 0) -- (8, 3);
-		\node (a4) [Node] at (7,0.25) {\texttt{c} (5)};
-		\node (b4) [Node] at (7,0.75) {\texttt{d} (8)};
-		\end{tikzpicture}
+		\caption{A \texttt{swapWrong2} függvén szemléltetése.}\label{stack_swap_wrong_2}
 	\end{figure}
 	\subsection{Referencia szerinti paraméter átadás}
 	Megállapíthatjuk, hogy az előző megoldásnál nem változtattuk meg, hogy mire mutassanak a pointerek, így azokat konstansként is definiálhatnánk. A konstans pointerek módosíthatják a mutatott értéket, de nem lehet őket átállítani egy másik memória címre. Úgy tudunk egy ilyen pointert létrehozni, hogy a csillag után írjuk a \texttt{const} kulcsszót.
